tests/NormalTests/paczka1/fuzzy1/46608742.err
Error in line 1: swtQPqUa4L A252 74,8
Error in line 5: A1 S465 30,3
Error in line 7: A1 S465 52,3
Error in line 8: A1 S465 250,0
Error in line 14: A1 A252 65,2
Error in line 15: A1 A252 192,3
Error in line 24: A1 A1 4,2
Error in line 26: B7fCfYRjrc S465 85,6
Error in line 29: swtQPqUa4L S465 3,0
Error in line 12: 2lmuHm4Z4 A159 54,9
Error in line 38: A1 A1 57,6
